--- a/Deployed/Site.master
+++ b/Deployed/Site.master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="Site.master.cs" Inherits="SiteMaster" %>
+﻿<%@ master language="C#" autoeventwireup="true" inherits="SiteMaster, App_Web_5eprcqll" %>
 
 <!DOCTYPE html>
 
