--- a/Deployed/Site.master
+++ b/Deployed/Site.master
@@ -1,4 +1,4 @@
-﻿<%@ master language="C#" autoeventwireup="true" inherits="SiteMaster, App_Web_5eprcqll" %>
+﻿<%@ master language="C#" autoeventwireup="true" inherits="SiteMaster, App_Web_ieyb4xh1" %>
 
 <!DOCTYPE html>
 
