WebSender single file with a filter

--- a/WebSender/WebSender/Views/TrackData/Index.cshtml
+++ b/WebSender/WebSender/Views/TrackData/Index.cshtml
@@ -10,7 +10,7 @@
 <form action="~/TrackData/SendFile" method="post" enctype="multipart/form-data">
 
     <label for="audioFile">AudioFile:</label>
-    <input type="file" name="audio" id="audio" />
+    <input type="file" name="file" id="file" />
 
     <input type="submit" value="SendFile" />
 </form>
